2000-07-31  Not Zed  <NotZed@HelixCode.com>

	* filter-input.c (filter_input_set_value): Set value of a simple
	type to a new string.

	* filter-option.c (filter_option_set_current): New function to set
	the current value of an option.

	* filter-rule.c (filter_rule_find_list): New function to find a
	rule in a list, by name.
	(filter_rule_set_name): Let you set the name of a rule.

	* rule-context.c (rule_context_find_rule): Find a rule by name.
	(rule_context_create_part): Helper to find and clone a part by
	name.

	* filter-folder.c (button_clicked): Fix warning.

	* filter.glade: Add new widgets for vfolder rule editor.
	
	* vfolder-context.c (vfolder_context_init): Changed to use vfolder
	rule as the rule type.

	* vfolder-rule.c: New class to encode extra information required
	for vfolder rules.

2000-07-30  Not Zed  <NotZed@HelixCode.com>

	**  Almost a total rewrite of every file, except for filter-driver
	which just had minor updates.

	The rule format has changed.

2000-07-24  Dan Winship  <danw@helixcode.com>

	* filter-driver.c (do_delete, filter_driver_run): Update for
	CamelFolder API changes. (delete_message and get_uids don't take
	exceptions any more.)

2000-07-11  Jeffrey Stedfast  <fejj@helixcode.com>

	* filter-driver.c (filter_driver_run): Updated to reflect changes to
	camel_folder_append_message ()

2000-07-09  Dan Winship  <danw@helixcode.com>

	* filter-xml.[ch]: add a "string" type

	* filtertype.xml, vfoldertypes.xml: Use type="string" rather than
	"folder" for subject/body matching.

	* filter-arg-types.c: Update some strings for "text" input. Fix
	some warnings (including one that pointed out a real bug).

	* filter-arg.c, filter-druid.c, filter-format.c: fix warnings

2000-07-07  Dan Winship  <danw@helixcode.com>

	* filter-driver.c: Update for camel_folder_search_by_expression
	change (GList -> GPtrArray).

	* vfoldertypes.xml: sync this to filtertypes.xml (to/cc thing)

2000-07-05  Dan Winship  <danw@helixcode.com>
